--- a/Backend_project/assets/templates/room.html
+++ b/Backend_project/assets/templates/room.html
@@ -24,8 +24,13 @@
 
 
     <div flex="60" style="height: 700px; margin-left: auto; margin-right: auto; background-color: #add8e6;">
+        <h2 style="text-align: center" ng-show="content&&content.title">{{content.title}}</h2>
         <div style="height: 558px;">
             <youtube-video ng-if="content&&content.contentType=='ytb'" video-url="content.path" player-width="'100%'" player-height="'100%'"></youtube-video>
+            <img ng-if="content&&(content.contentType=='image/jpeg'||content.contentType=='image/png')" ng-src="{{content.path}}" style="max-width: 100%;margin:0 auto;"/>
+            <audio ng-if="content&&(content.contentType=='audio/mpeg'||content.contentType=='audio/mp3')" controls="controls">
+                <source ng-src="{{content.path}}" type="{{content.contentType}}">
+            </audio>
         </div>
 
         <div style="height: 100px;">
