--- a/Backend_project/assets/styles/style.css
+++ b/Backend_project/assets/styles/style.css
@@ -38,12 +38,12 @@
     margin-right: 20px;
     margin-left: 10px;
     margin-top: 10px;
-    -webkit-box-shadow: 3px 3px 12px 0px rgba(50, 50, 50, 0.75);
-    -moz-box-shadow:    3px 3px 12px 0px rgba(50, 50, 50, 0.75);
-    box-shadow:         3px 3px 12px 0px rgba(50, 50, 50, 0.75);
+    -webkit-box-shadow: 1px 1px 4px 0px rgba(69, 69, 69, 0.8);
+    -moz-box-shadow:    1px 1px 4px 0px rgba(69, 69, 69, 0.8);
+    box-shadow:         1px 1px 4px 0px rgba(69, 69, 69, 0.8);
  }
 #firstletter{
-    color: #ffffff;
+    color: #454545;
     font-family: 'FontAwesome', sans-serif;
     font-size: 30px;
     font-weight: bold;
@@ -62,4 +62,7 @@ text-align: center;
     -webkit-transform: scale(0.9); /* Chrome, Safari, Opera */
     transform: scale(0.9);
 
+}
+.hide{
+    display: none;
 }
