--- a/Backend_project/assets/templates/room.html
+++ b/Backend_project/assets/templates/room.html
@@ -6,7 +6,7 @@
                 <md-item ng-repeat="u in users">
                     <md-item-content>
                         <div class="md-tile-left">
-                            <div class="face" ng-style="{'background-color':'{{u.color}}'}">
+                            <div class="face" style="background-color:#ffffff;">
                                 <div id="firstletter">
                                     {{u.first}}
                                 </div>
@@ -23,33 +23,40 @@
     </div>
 
 
-    <div flex="60" style="height: 700px; margin-left: auto; margin-right: auto; background-color: #add8e6;">
-        <h2 style="text-align: center" ng-show="content&&content.title">{{content.title}}</h2>
-        <div style="height: 558px;">
+    <div flex="60" style="height: 700px; margin-left: auto; margin-right: auto;">
+     <md-whiteframe class="md-whiteframe-z1" style="margin-top:15px;" layout layout-align="center center">
+         <h2 style="text-align: center" ng-show="content&&content.title">{{content.title}}</h2>
+     </md-whiteframe>
+     <md-whiteframe class="md-whiteframe-z5" layout layout-align="center center">
+
+        <div style="height: 558px; padding-top:20px; width:100%;">
             <youtube-video ng-if="content&&content.contentType=='ytb'" video-url="content.path" player-width="'100%'" player-height="'100%'"></youtube-video>
             <img ng-if="content&&(content.contentType=='image/jpeg'||content.contentType=='image/png')" ng-src="{{content.path}}" style="max-width: 100%;margin:0 auto;"/>
             <audio ng-if="content&&(content.contentType=='audio/mpeg'||content.contentType=='audio/mp3')" controls="controls">
                 <source ng-src="{{content.path}}" type="{{content.contentType}}">
             </audio>
+
         </div>
+    </md-whiteframe>
+     <md-whiteframe class="md-whiteframe-z2" layout layout-align="center center" style="margin-top:30px;">
+
 
         <div ng-if="content" style="height: 100px;">
-            <div style="margin: 30px 0 10px 385px;">
-<<<<<<< HEAD
-                <img id="tinderyes" ng-src="./images/TinderYes.png" title="HOT" ng-click="tinderYes()">
+            <div style="text-align:center; margin-top:10px;">
+
+                <img id="tinderyes" ng-src="./images/TinderYes.png" title="HOT" ng-click="tinderYes()" style="margin-right:90px;">
                 <img id="tinderno" ng-src="./images/TinderNo.png" title="NOT" ng-click="tinderNo()">
-=======
-                <img id="tinderyes" src="images/TinderYes.png" title="tinder yes" ng-click="tinderYes()">
-                <img id="tinderno" src="images/TinderNo.png" title="tinder no" ng-click="tinderNo()">
->>>>>>> d94871ca67196887e8c105d017de2cae11e5ef1c
+
             </div>
             <div ng-show="(content.loves+content.hates)>0">
                 <md-progress-linear id="lin2" md-mode="determinate" value="{{100*content.loves/(content.loves+content.hates)}}"></md-progress-linear>
                 <md-progress-linear id="lin1" style=" padding-top: 10px;" md-mode="determinate" value="{{100*content.hates/(content.loves+content.hates)}}"></md-progress-linear>
             </div>
         </div>
-    </div>
 
+
+    </div>
+  </md-whiteframe>
 </div>
 
 
