--- a/Backend_project/views/layout.ejs
+++ b/Backend_project/views/layout.ejs
@@ -13,6 +13,9 @@
 </head>
 
     <body ng-app="app" ng-controller="rootController as rootCtrl">
+     <md-whiteframe class="md-whiteframe-z1" layout layout-align="center center">
+
+
         <md-toolbar>
             <div class="md-toolbar-tools">
                 <span>{{title}}</span>
@@ -23,6 +26,7 @@
                 </md-button>
             </div>
         </md-toolbar>
+     </md-whiteframe>
         <div ng-view>
         </div>
         <script src="/js/dependencies/sails.io.js"></script>
